# serialTest

./: CMakeCache.txt  CMakeLists.txt  Makefile  NeuerVersuch  cmake_install.cmake  serialTestRead  serialTestWrite  serialTiltScanner  serialWriteRead
src/: NeuerVersuch.cpp  serialStreamWrite.cpp  serialTestRead.cpp  serialTestWrite.cpp  serialTilstScanner.cpp  serialWriteRead.cpp
